# coding-agent-template

./: .editorconfig  .env.example  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  REQUIREMENTS.md  VERSION_0.1_RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.claude/commands/: README.md  lint_and_format.md  run_tests_with_coverage.md  type_check.md
.config/: starship.toml
.devcontainer/: Dockerfile  devcontainer.json  otel-config.yaml.j2  postCreateCommand.sh  postStartCommand.sh  supervisord.conf  telemetry.conf
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_PLANNING.md  ARCHITECTURE_REFINED.md  BASH_HISTORY_DECISION.md  COMPOSE_VS_DEVCONTAINER.md  DEVCONTAINER_SETUP.md  DOCS_INDEX.md  INTERFACES.md  LOCALENV_EXPLAINED.md  MOUNT_ANALYSIS.md  QA_ARCHITECTURE.md  QUICK_START.md  README.md  TECHNICAL_DECISIONS.md  agent-onboarding.md  agents.md  architecture.md  conventions.md  customization.md  environment-config.md  general-theory.md  link-collection.md  practical-usage-guide-for-agents.md  project-management-methodologies.md  prompt-engineering-guide.md  prompt-engineering-skeleton.md  setup.md  theory-of-agents.md  theory-of-modern-agents.md  tool-specific-guide-for-agents.md  tools.md  troubleshooting.md
docs/conventions/: README.md
docs/examples/: debugging-session.md  multi-agent-workflow.md  single-agent-task.md
docs/templates/: FEATURE_DOCUMENTATION.md  SERVICE_DOCUMENTATION.md
docs/workflows/: README.md
health/: check_system.sh
scripts/: check-services.sh  list-agents.sh  run-telemetry.sh  setup-agent.sh
scripts/mcp-servers/: README.md  mcp_mail.py  mcp_processes.py
src/: config.py
src/example/: __init__.py  core.py
tests/: README.md  conftest.py  test_core.py
tests/unit/: test_config.py
